--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,5 @@ jobs:
         cach-dependancy-path: "./server/package-lock-json"
     - run: npm ci
     - run: npm run build --if-present
+      working-directory: ./server
     - run: npm test
