--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,9 +11,7 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [18.x]
@@ -26,7 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cach-dependancy-path: "./server/package-lock-json"
+        cach-dependancy-path: "./server/package-lock.json"
     - run: npm ci
     - run: npm run build --if-present
       working-directory: ./server
