--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cach-dependancy-path: "./server/package-lock.json"
+        cache-dependancy-path: "./server/package-lock.json"
     - run: npm ci
     - run: npm run build --if-present
       working-directory: ./server
