--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: "./server/package-lock-json"
+        cache-dependency-path: "./server/package-lock.json"
     
     - run: npm run build --if-present
       working-directory: ./server
